[package]
name = "jutsuparser-rs"
version = "0.1.0"
edition = "2021"
features = ["generators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"]}
tokio = { version = "*", features = ["full"] }
kuchiki = "*"
regex = "*"